--- a/src/main/resources/templates/pages/sign/in/signIn.html
+++ b/src/main/resources/templates/pages/sign/in/signIn.html
@@ -15,7 +15,7 @@
             <div class="logo">MOIDA</div>
             <div class="main-sign-description">
                 취향이 닿는 곳, 우리가 모이는 이유<br/>
-                모일수록 즐거운 세상, 모이다에서 시작돼요
+                모일수록 즐거운 세상, 모이다에서 시작돼요 d
             </div>
             <div class="main-sign-inputBox">
                 <label>사용자명
