--- a/src/main/resources/templates/pages/sign/up/signUp.html
+++ b/src/main/resources/templates/pages/sign/up/signUp.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div layout:fragment="content" class="main-wrapper main-wrapper-center">
-    <form class="main-sign-container">
+    <form class="main-sign-container" method="POST" th:action="@{/sign/up}">
         <div class="logo">MOIDA</div>
         <div class="main-sign-description">
             취향이 닿는 곳, 우리가 모이는 이유<br/>
@@ -18,38 +18,38 @@
         </div>
         <div class="main-sign-inputBox">
             <label>사용자명 *
-                <input type="text" name="username" placeholder="아이디를 입력해주세요"/>
+                <input type="text" name="username" placeholder="아이디를 입력해주세요" required/>
             </label>
             <label>비밀번호 *
-                <input type="password" name="password" placeholder="비밀번호를 입력해주세요"/>
+                <input type="password" name="password" placeholder="비밀번호를 입력해주세요" required/>
             </label>
             <label>비밀번호 확인 *
-                <input type="password" name="confirm" placeholder="비밀번호를 다시 입력해주세요"/>
+                <input type="password" name="confirm" placeholder="비밀번호를 다시 입력해주세요" required/>
             </label>
             <label>이름 *
-                <input type="text" name="name" placeholder="이름을 입력해주세요"/>
+                <input type="text" name="name" placeholder="이름을 입력해주세요" required/>
             </label>
             <label>생일 *
-                <input type="date" name="birthday"/>
+                <input type="date" name="birthday" required/>
             </label>
             <label>성별 *
-                <select name="gender">
+                <select name="gender" required>
                     <option value="M">남자</option>
                     <option value="F">여자</option>
                 </select>
             </label>
             <label>이메일 *
-                <input type="email" name="email" placeholder="이메일을 입력해주세요"/>
+                <input type="email" name="email" placeholder="이메일을 입력해주세요" required />
             </label>
             <label>전화번호 *
-                <input type="tel" name="phone" placeholder="전화번호를 입력해주세요"/>
+                <input type="tel" name="phone" placeholder="전화번호를 입력해주세요" required/>
             </label>
             <label class="main-sign-postBox">주소 *
                 <div class="main-sign-postDiv">
                     <button onclick="execDaumPostcode()">주소찾기</button>
-                    <input type="text" id="zipCode" name="zipCode" disabled="disabled"/>
+                    <input type="text" id="zipCode" name="zipCode" readonly />
                 </div>
-                <input type="text" id="address1" name="address1" disabled="disabled"/>
+                <input type="text" id="address1" name="address1" readonly/>
                 <input type="text" id="address2" name="address2"/>
                 <div id="daumPostcodeContainer" style="display:none; position:relative; z-index:999;"></div>
             </label>
