--- a/src/main/resources/templates/layouts/base.html
+++ b/src/main/resources/templates/layouts/base.html
@@ -1,11 +1,9 @@
 <!-- src/main/resources/templates/layout/base.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="" lang="ko">
-<head>
-    <title>MOIDA</title>
-    <div th:include="~{fragments/header :: head}"></div>
-</head>
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      lang="ko">
+<head th:replace="~{fragments/header :: head}"></head>
 <body>
 <div th:replace="~{fragments/header :: navigation}"></div>
 
