--- a/src/main/resources/static/css/sign.css
+++ b/src/main/resources/static/css/sign.css
@@ -80,6 +80,12 @@
     box-sizing: border-box;
 }
 
+.main-sign-container > .error-text {
+    margin-bottom: 50px;
+    text-align: center;
+    color: red;
+}
+
 .main-sign-container > button {
     width: 100%;
     font-size: 1rem;
