--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -88,6 +88,13 @@ a {
     margin-top: 4px;
 }
 
+.detail-container {
+    width: 100%;
+    max-width: 1200px;
+    padding: 30px 0;
+    margin: 0 auto;
+}
+
 .banner-container {
     width: 100%;
     height: 370px;
