BACK : /my/password 생성 완료

--- a/src/main/resources/static/css/sign.css
+++ b/src/main/resources/static/css/sign.css
@@ -80,7 +80,7 @@
     box-sizing: border-box;
 }
 
-.main-sign-container > .error-text {
+.error-text {
     margin-bottom: 50px;
     text-align: center;
     color: red;
