--- a/src/main/resources/templates/fragments/mobileMenu.html
+++ b/src/main/resources/templates/fragments/mobileMenu.html
@@ -82,7 +82,10 @@
                     </th:block>
                     <th:block th:if="${loginUser != null}">
                         <a href="/my/info" class="menu-item">
-                            회원정보수정
+                            회원 정보 수정
+                        </a>
+                        <a href="/my/password" class="menu-item">
+                            비밀번호 변경
                         </a>
                         <a href="/sign/out" class="menu-item">
                             로그아웃
