--- a/src/main/resources/templates/pages/my/info.html
+++ b/src/main/resources/templates/pages/my/info.html
@@ -10,7 +10,10 @@
         <div class="my-left-container">
             <div class="my-menuBox">
                 <a href="/my/info">
-                    회원정보수정
+                    회원 정보 수정
+                </a>
+                <a href="/my/password">
+                    비밀번호 변경
                 </a>
                 <a href="/sign/out">
                     로그아웃
