BACK : Moim 클래스 생성

--- a/src/main/resources/templates/pages/moim/moim_detail.html
+++ b/src/main/resources/templates/pages/moim/moim_detail.html
@@ -9,7 +9,7 @@
     <div class="main-container"> <!--모임메인사진-->
         <img src="moim_main_pic1.JPG" alt="모임메인사진" class="moim-main-image">
         <!--모바일 버전 모임 제목, 설명, 신청버튼-->
-        <div class="moim-title-mobile">와인 소셜 클럽</div>
+        <div class="moim-title-mobile">[[${moimTitle}]]</div>
         <div class="moim-description-mobile">
             <i class="ti ti-calendar-week"></i>국채보상로 25.07.15(일) 오후 6시:30
         </div>
