장성남 수정중

--- a/src/main/resources/static/css/jsncss.css
+++ b/src/main/resources/static/css/jsncss.css
@@ -12,27 +12,26 @@
     color: #ffa600;
 }
 
-.box{
-    border: 10px solid #f3760f;
-    margin:0 auto;
-    margin-bottom: 60px;
-    width: 300px;
-    height: 420px;
-    padding: 50px;
-    background: white; /*#ffa600 진한거 #ffcd62 연한거*/
-    border-radius: 40px;
+/* .box{ */
+/*     border: 10px solid #f3760f; */
+/*     margin:0 auto; */
+/*     margin-bottom: 60px; */
+/*     width: 300px; */
+/*     height: 420px; */
+/*     padding: 50px; */
+/*     background: white; #ffa600 진한거 #ffcd62 연한거 */
+/*     border-radius: 40px; */
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-}
+/*     display: flex; */
+/*     flex-direction: column; */
+/*     align-items: center; */
+/*     gap: 15px; */
+/* } */
 
 .buttons {
     display: flex;
     justify-content: center;
     gap: 30px;
-    margin: -38px;
 }
 
 .custom-upload-button{
@@ -58,13 +57,13 @@ button {
 .btn{
     background-color: white;
     font-size: 14px;
+    font-weight: bold;
     color: #f3760f;
     border: 1px solid #f3760f;
     border-radius: 5px;
     cursor: pointer;
     padding: 10px 20px;
     text-align: center;
-    display: inline-block;
 }
 
 
@@ -72,9 +71,9 @@ button {
     margin: 0 auto;
     border: 2px solid #f3760f;
     width: 550px;
-    height: 730px;
     align-items: center;
     border-radius: 40px;
+    margin-top:20px;
 }
 .create-moim {
     font-size: 20px;
@@ -86,7 +85,8 @@ button {
     font-size: 35px;
     font-family: 'RiaSans-ExtraBold';
     font-weight: lighter;
-    margin-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 20px;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
 }
 
@@ -102,86 +102,78 @@ button {
     text-align: center;
 }
 
-.create-moim-info-container{
-    float: left;
-    padding-left: 20px;
-    padding-right: 10px;
-    width: 100%;
-    height: 500px;
-}
-.create-moim-info-container input{
-    box-sizing: border-box;
-    width: 73%;
-    padding: 10px;
-    margin-top: 10px;
-    border: 1px solid #f3760f;
-    border-radius: 5px;
-    font-size: 16px;
-}
+/* .create-moim-info-container input{ */
+/*     box-sizing: border-box; */
+/*     width: 73%; */
+/*     padding: 10px; */
+/*     margin-top: 10px; */
+/*     border: 1px solid #f3760f; */
+/*     border-radius: 5px; */
+/*     font-size: 16px; */
+/* } */
 
-.create-moim-info-container label{
-    font-weight: bold;
-    color: #f3760f;
-}
-.create-moim-info-container textarea{
-    box-sizing: border-box;
-    width: 73%;
-    height: 200px;
-    padding: 10px;
-    scrollbar-width: auto;
-    margin-top: 10px;
-    border: 1px solid #f3760f;
-    border-radius: 5px;
-    font-size: 16px;
-}
-.create-moim-info-container select{
-    box-sizing: border-box;
-    width: 66%;
-    padding: 10px;
-    margin-top: 10px;
-    border: 1px solid #f3760f;
-    border-radius: 5px;
-    font-size: 16px;
-    color: grey;
-}
+/* .create-moim-info-container label{ */
+/*     font-weight: bold; */
+/*     color: #f3760f; */
+/* } */
+/* .create-moim-info-container textarea{ */
+/*     box-sizing: border-box; */
+/*     width: 73%; */
+/*     height: 200px; */
+/*     padding: 10px; */
+/*     scrollbar-width: auto; */
+/*     margin-top: 10px; */
+/*     border: 1px solid #f3760f; */
+/*     border-radius: 5px; */
+/*     font-size: 16px; */
+/* } */
+/* .create-moim-info-container select{ */
+/*     box-sizing: border-box; */
+/*     width: 66%; */
+/*     padding: 10px; */
+/*     margin-top: 10px; */
+/*     border: 1px solid #f3760f; */
+/*     border-radius: 5px; */
+/*     font-size: 16px; */
+/*     color: grey; */
+/* } */
 
-.moim-description{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-}
+/* .moim-description{ */
+/*     display: flex; */
+/*     flex-direction: row; */
+/*     align-items: flex-start; */
+/* } */
 
-.moim-description label{
-    margin-top: 0;
-    margin-bottom: 5px;
-    font-weight: bolder;
-}
+/* .moim-description label{ */
+/*     margin-top: 0; */
+/*     margin-bottom: 5px; */
+/*     font-weight: bolder; */
+/* } */
 
-.moim-description textarea{
-    resize: none;
-    overflow: auto;
-    height: 200px;
-    margin-left: 5px;
-}
+/* .moim-description textarea{ */
+/*     resize: none; */
+/*     overflow: auto; */
+/*     height: 200px; */
+/*     margin-left: 5px; */
+/* } */
 
 
 
-.create-moim-info-container input,
-.create-moim-info-container textarea,
-.create-moim-info-container select {
-    transition: border-color 0.3s ease, box-shadow 0.3s ease;
-}
+/* .create-moim-info-container input, */
+/* .create-moim-info-container textarea, */
+/* .create-moim-info-container select { */
+/*     transition: border-color 0.3s ease, box-shadow 0.3s ease; */
+/* } */
 
-.create-moim-info-container input:focus,
-.create-moim-info-container textarea:focus,
-.create-moim-info-container select:focus {
-    outline: none;
-    border-color: #ffa600;
-    box-shadow: 0 0 0 6px rgba(255, 166, 0, 0.2);
-}
+/* .create-moim-info-container input:focus, */
+/* .create-moim-info-container textarea:focus, */
+/* .create-moim-info-container select:focus { */
+/*     outline: none; */
+/*     border-color: #ffa600; */
+/*     box-shadow: 0 0 0 6px rgba(255, 166, 0, 0.2); */
+/* } */
 
 .btn:hover,
-.custom-upload-button:hover,
 button:hover {
     background-color: #f3760f;
     color: white;
