--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" th:href="@{/css/sign.css}"/>
     <link rel="stylesheet" th:href="@{/css/my.css}"/>
     <link rel="stylesheet" th:href="@{/css/moim_detail.css}"/>
-
+	<link rel="stylesheet" th:href="@{/css/jsncss.css}">
+	<link rel="stylesheet" th:href="@{/css/jsncss3.css}"/>
     <script src="//cdn.jsdelivr.net/npm/@tabler/icons@latest/icons-react/dist/index.umd.min.js" defer></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js" defer></script>
     <script type="application/javascript" th:src="@{/js/script.js}" defer></script>
