--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -5,83 +5,18 @@
       layout:decorate="~{layouts/base}"
       lang="ko">
 <body>
-    <main layout:fragment="content">
+    <main class="" layout:fragment="content">
         <div class="banner-container">
             <img th:src="@{/images/home/1749630156_pc_main_banner_summersweet.png}" alt="banner"/>
         </div>
         <div class="main-wrapper">
             <div class="category-container">
-                <a href="[category]/categoryList.html" class="category-item">
+                <a th:each="c : ${categoryList}"
+                   th:href="@{/category/${id}(id=${c.categoryId})}" class="category-item">
                     <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-01.png}" alt="category-01"/>
+                        <img th:src="@{https://kr.object.iwinv.kr/moida/{path}(path=${c.fileConvert})}" alt="category-01"/>
                     </div>
-                    여행
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-02.png}" alt="category-01"/>
-                    </div>
-                    레져
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-03.png}" alt="category-01"/>
-                    </div>
-                    문화예술
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-04.svg}" alt="category-01"/>
-                    </div>
-                    파티
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-05.svg}" alt="category-01"/>
-                    </div>
-                    식사
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-06.svg}" alt="category-01"/>
-                    </div>
-                    자기계발
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-07.svg}" alt="category-01"/>
-                    </div>
-                    N잡
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-08.svg}" alt="category-01"/>
-                    </div>
-                    외국어
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-09.svg}" alt="category-01"/>
-                    </div>
-                    취미
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-10.svg}" alt="category-01"/>
-                    </div>
-                    소셜게임
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-12.svg}" alt="category-01"/>
-                    </div>
-                    동네또래
-                </a>
-                <a href="[category]/categoryList.html" class="category-item">
-                    <div class="category-item-icon">
-                        <img th:src="@{/images/home/category-13.svg}" alt="category-01"/>
-                    </div>
-                    연애사랑
+                    <span th:text="${c.categoryName}"></span>
                 </a>
             </div>
         </div>
