--- a/src/main/resources/templates/pages/moim/CreateMoim.html
+++ b/src/main/resources/templates/pages/moim/CreateMoim.html
@@ -95,6 +95,15 @@
 							placeholder="모임 설명을 입력하세요"></textarea>
 					</div>
 				</div>
+				<div class="create-moim-row">
+					<div class="create-moim-label">
+						<label for="moim-description">호스트 소개 :</label>
+					</div>
+					<div class="create-moim-input">
+						<textarea id="moim-description" name="moim-description" 
+							placeholder="간단한 자기소개를 써주세요."></textarea>
+					</div>
+				</div>
 
 				<div class="buttons">
 					<label for="upload-photo" class="btn">사진 업로드<i
