NOTICE LISt 코드 완료

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" th:href="@{/css/jsncss3.css}"/>
     <link rel="stylesheet" th:href="@{/css/jsncss2.css}"/>
     <link rel="stylesheet" th:href="@{/css/category.css}"/>
+    <link rel="stylesheet" th:href="@{/css/notice_list.css}"/>
     <script src="//cdn.jsdelivr.net/npm/@tabler/icons@latest/icons-react/dist/index.umd.min.js" defer></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js" defer></script>
     <script type="application/javascript" th:src="@{/js/script.js}" defer></script>
