--- a/src/main/resources/templates/pages/notice/detail.html
+++ b/src/main/resources/templates/pages/notice/detail.html
@@ -1,10 +1,47 @@
+<!-- src/main/resources/templates/layout/base.html -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      lang="ko">
+<head th:replace="~{fragments/header :: head}"></head>
 <body>
+<div th:replace="~{fragments/header :: navigation}"></div>
 
+<main class="notice-container" layout:fragment="content">
+
+    <h2 class="notice-detail-title">공지사항 상세</h2>
+
+    <div class="notice-detail-row">
+        <span class="notice-label">제목:</span>
+        <span class="notice-content">${ }</span>
+    </div>
+
+    <div class="notice-detail-row">
+        <span class="notice-label">작성자:</span>
+        <span class="notice-content">${ }</span>
+    </div>
+
+    <div class="notice-detail-row">
+        <span class="notice-label">작성일:</span>
+        <span class="notice-content">${ }</span>
+    </div>
+
+    <div class="notice-detail-row">
+        <span class="notice-label">내용:</span>
+    </div>
+
+    <div class="notice-detail-content">
+        ${ }
+    </div>
+
+    <div class="notice-edit-button-wrapper">
+        <button class="notice-edit-button" onclick="location.href='edit.html'">수정하기</button>
+    </div>
+
+</main>
+
+<div th:replace="~{fragments/footer :: footer}"></div>
+<div th:replace="~{fragments/backdrop :: backdrop}"></div>
+<div th:replace="~{fragments/mobileMenu :: mobileMenu}"></div>
 </body>
 </html>
