--- a/src/main/resources/templates/pages/notice/list.html
+++ b/src/main/resources/templates/pages/notice/list.html
@@ -1,93 +1,86 @@
+<!-- src/main/resources/templates/layout/base.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/base}"
       lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>공지사항</title>
-    <style>
-        body{
-          font-family: sans-serif;
-          max-width: 800px;
-          margin: 40px auto;
-        }
-
-        h2{
-          font-size: 24px;
-          font-weight: 700;
-          margin-bottom: 20px;
-          border-bottom: 2px solid #000;
-          padding-bottom: 10px;
-        }
-
-        table{
-          width: 100%;
-          border-collapse: collapse;
-        }
-
-        tbody tr td{
-          padding: 12px 8px;
-          border-bottom: 1px solid #ddd;
-        }
-
-        td.title{
-          font-weight: 600;
-          text-align: left;
-        }
-
-        td.date{
-          text-align: right;
-          color: #888;
-          white-space: nowrap;
-        }
-
-        /* 작성 버튼 영역 */
-        .write-button-wrapper {
-          margin-top: 30px;
-          text-align: right;
-        }
-
-        .write-button {
-          background-color: #000;
-          color: #fff;
-          font-weight: bold;
-          padding: 10px 20px;
-          border: none;
-          border-radius: 6px;
-          cursor: pointer;
-          transition: background-color 0.2s ease;
-        }
-
-        .write-button:hover {
-          background-color: #333;
-        }
-    </style>
-</head>
+<head th:replace="~{fragments/header :: head}"></head>
 <body>
+<div th:replace="~{fragments/header :: navigation}"></div>
 
-<h2>공지사항</h2>
+<main class="notice-container" layout:fragment="content">
+    <h2 class="notice-title">공지사항</h2>
 
-<table>
-    <tbody>
-    <tr><td class="title">[공지] 서비스 점검 안내 1</td><td class="date">2024-11-21</td></tr>
-    <tr><td class="title">[공지] 시스템 업데이트 예정 2</td><td class="date">2024-11-20</td></tr>
-    <tr><td class="title">[공지] 보안 패치 완료 3</td><td class="date">2024-11-19</td></tr>
-    <tr><td class="title">[공지] 긴급 점검 안내 4</td><td class="date">2024-11-18</td></tr>
-    <tr><td class="title">[공지] 이벤트 당첨자 발표 5</td><td class="date">2024-11-17</td></tr>
-    <tr><td class="title">[공지] 정기 점검 일정 공지 6</td><td class="date">2024-11-16</td></tr>
-    <tr><td class="title">[공지] 이용약관 변경 안내 7</td><td class="date">2024-11-15</td></tr>
-    <tr><td class="title">[공지] 고객센터 운영시간 변경 8</td><td class="date">2024-11-14</td></tr>
-    <tr><td class="title">[공지] 휴면계정 정책 안내 9</td><td class="date">2024-11-13</td></tr>
-    <tr><td class="title">[공지] 신규 기능 추가 안내 10</td><td class="date">2024-11-12</td></tr>
-    <tr><td class="title">${ }</td><td class="date">${ }</td></tr>
-    </tbody>
-</table>
+    <div class="bd-example">
+        <table class="notice-table">
+            <thead>
+            <tr>
+                <th width="80px" class="notice-title-cell">글 번호</th>
+                <th class="notice-title-cell">글 제목</th>
+                <th width="130px" class="notice-title-cell">작성자</th>
+                <th width="130px" class="notice-title-cell">작성일자</th>
+                <th width="80px" class="notice-title-cell">조회수</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="notice : ${list}">
+                <td th:text="${notice.noticeId}"></td>
+                <td th:text="${notice.noticeTitle}"></td>
+                <td>관리자</td>
+                <td th:text="${notice.noticeDate}" class="notice-date-cell"></td>
+                <td th:text="${notice.noticeCount}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
-<!-- 작성 버튼 -->
-<div class="write-button-wrapper">
-    <button class="write-button" onclick="location.href='write.html'">공지사항 작성</button>
-</div>
 
+    <div class="notice-write-button-wrapper">
+        <button th:if="${session.loginUser}" class="notice-write-button" type="button"
+                onclick="location.href='/board/write'">공지사항 작성
+        </button>
+    </div>
+
+    <nav aria-label="Standard pagination example" style="float: right;">
+        <ul class="pagination">
+
+            <li class="page-item">
+                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage-1})}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+
+            <li class="page-item" th:each="p : ${#numbers.sequence(pi.startPage, pi.endPage)}">
+                <a class="page-link" th:href="@{${loc}(page=${p})}">[[${p}]]</a>
+            </li>
+
+            <li class="page-item">
+                <a class="page-link" th:href="@{${loc}(page=${pi.currentPage+1})}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+
+        </ul>
+    </nav>
+
+</main>
+
+<script th:inline="javascript">
+    window.onload = () => {
+        const currentPage = /*<![CDATA[*//*[[${pi.currentPage}]]*/1/*]]>*/
+        const tbody = document.querySelector("tbody");
+        const tds = tbody.querySelectorAll('td');
+        for(const td of tds) {
+            td.addEventListener('click', e => {
+                const trTds = e.target.parentElement.querySelectorAll('td');
+                const noticeId = trTds[0].innerText;
+                location.href = '/notice/' + noticeId + '/' + /*<![CDATA[*//*[[${pi.currentPage}]]*/1/*]]>*/;
+            });
+        }
+    }
+</script>
+
+<div th:replace="~{fragments/footer :: footer}"></div>
+<div th:replace="~{fragments/backdrop :: backdrop}"></div>
+<div th:replace="~{fragments/mobileMenu :: mobileMenu}"></div>
 </body>
 </html>
