--- a/src/main/resources/templates/pages/notice/write.html
+++ b/src/main/resources/templates/pages/notice/write.html
@@ -1,10 +1,32 @@
+<!-- src/main/resources/templates/layout/base.html -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      lang="ko">
+<head th:replace="~{fragments/header :: head}"></head>
 <body>
+<div th:replace="~{fragments/header :: navigation}"></div>
 
+<main class="notice-container" layout:fragment="content">
+
+    <h2 class="notice-form-title">공지사항 작성</h2>
+
+    <form class="notice-form" action="/submit" method="POST">
+        <label class="notice-form-label" for="title">제목</label>
+        <input class="notice-form-input" type="text" id="title" name="title" required>
+
+        <label class="notice-form-label" for="content">내용</label>
+        <textarea class="notice-form-textarea" id="content" name="content" required></textarea>
+
+        <div class="notice-form-button-wrapper">
+            <button type="submit" class="notice-form-submit-button">등록하기</button>
+        </div>
+    </form>
+
+</main>
+
+<div th:replace="~{fragments/footer :: footer}"></div>
+<div th:replace="~{fragments/backdrop :: backdrop}"></div>
+<div th:replace="~{fragments/mobileMenu :: mobileMenu}"></div>
 </body>
 </html>
